k8s/openldap-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openldap
  namespace: carta
spec:
  selector:
    app: carta-controller
    component: ldap
  ports:
    - protocol: TCP
      port: 389
      targetPort: 389
      name: ldap
    - protocol: TCP
      port: 636
      targetPort: 636
      name: ldaps
